tests/neg/unsound-reach.check
-- [E007] Type Mismatch Error: tests/neg/unsound-reach.scala:18:17 -----------------------------------------------------
18 |    boom.use(f): (f1: File^{backdoor*}) => // error
   |                 ^
   |                 Found:    (f1: box File^{backdoor*}) ->? Unit
   |                 Required: (f1: box File^) => Unit
19 |      escaped = f1
   |
   | longer explanation available when compiling with `-explain`
